--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-matplotlib==3.1.1
+sklearn==0.0.post1
+pandas==1.5.2
 numpy==1.23.5
-pandas<1.5.2
+matplotlib==3.6.2
+streamlit==1.15.0
 plotly==5.11.0
 scikit_learn==1.1.3
-streamlit==1.15.0
